--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,34 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 body{
-  background-color: gray;
+  background-color: #222b38;
 }
 
 header{
   font-size: 50px;
+  color: whitesmoke;
+  background-color:#000275;
+  border-radius: 20%;
+  width: 60%;
+  text-align: center;
+  border-style: solid;
+  border-width: 2px;
 }
 
 footer{
   font-size: 20px;
+  color: whitesmoke;
+  background-color: #000275;
+  border-radius: 20%;
+  width: 60%;
+  text-align: center;
+  border-style: solid;
+  border-width: 2px;
 }
 
 
@@ -40,12 +42,29 @@ footer{
 
 .mainDisplay{
   font-size: 20px;
-  color: beige;
+  color: whitesmoke;
   margin: 10px;
 }
 
 .traitText{
-  color: blue;
+  color: cyan;
+  text-decoration: underline;
+}
+
+.addTrait{
+  font-size: 20px;
+}
+
+.indivTrait{
+  background-color: whitesmoke;
+  padding: 5px;
+  border-radius: 5%;
+  margin: 5px;
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
 }
 
 .selectorDropdown{
@@ -54,7 +73,8 @@ footer{
 
 .linkButton {
   border-top: 1px solid #96d1f8;
-  background: #9dcae8;
+  /* background: #9dcae8; */
+  background: cyan;
   /* background: -webkit-gradient(linear, left top, left bottom, from(#005791), to(#9dcae8)); */
   background: -webkit-linear-gradient(top, #005791, #9dcae8);
   background: -moz-linear-gradient(top, #005791, #9dcae8);
@@ -70,15 +90,15 @@ footer{
   text-shadow: rgba(0,0,0,.4) 0 1px 0;
   color: #000000;
   font-size: 14px;
-  font-family: Georgia, serif;
+  /* font-family: Georgia, serif; */
   text-decoration: none;
   vertical-align: middle;
   margin: 5px;
   }
 .linkButton:hover {
   border-top-color: #512878;
-  background: #512878;
-  color: #ccc;
+  background: #000275;
+  color: whitesmoke;
   }
 .linkButton:active {
   border-top-color: #1b435e;
